# ui-designs

./: README.md  apland-navbar.html  sidebar-nav.html  tailwind-signup.html  unishop-table.html
003-appland/css/: apland.css
003-tailwind-signup/css/: tailwind-signup.css
004-sidebar-nav/: index.html
004-sidebar-nav/css/: sidebar-nav.css
004-unishop-table/css/: unishop-table.css
005-street-food/: index.html
005-street-food/css/: main.css
006-stripy-header/: index.html
006-stripy-header/css/: main.css
007-social-links-profile/: README.md  project.code-workspace
007-social-links-profile/elm/src/: AppColor.elm  Main.elm
007-social-links-profile/haskell/: cabal.project  fourmolu.yaml  social-links-profile.cabal
007-social-links-profile/haskell/app-atomic/: Main.hs
007-social-links-profile/haskell/app-hyper/: Main.hs  assets
007-social-links-profile/html-and-css/: index.html
css/: apland.css
sidebar-nav/css/: sidebar-nav.css
street-food/: index.html
